...
    return LayoutBuilder(
      builder: (context, constraints) {
        return AlertDialog(
          backgroundColor: Colors.yellow[200],
          contentPadding: const EdgeInsets.all(16.0),
          title: Text(
            'New todo',
            style: TextStyle(
                color: Theme.of(context).primaryColor, fontSize: 20.0),
          ),
          content: SingleChildScrollView(
            child: ConstrainedBox(
              constraints:
...
              ),
              onPressed: () {
                Navigator.of(context).pop();
              },
            ),
            OutlinedButton(
              key: const Key('addButtonTodoDialog'),
              child: Text(
                'Add',
                style: TextStyle(
                    color: Theme.of(context).primaryColor, fontSize: 16.0),
              ),
              onPressed: () {
...
